--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.container {
+  width: 90%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #f3f3f3;
+  padding: 15px;
+  border-radius: 15px;
+  display: flex
+}
+
+.container h2 {
+  flex: 1;
+}
+
+.questions {
+  flex: 3;
+}
+
+.question {
+  box-shadow: 0 5px 5px rgba(0, 0, 0, .2);
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.question:not(:last-child) {
+  margin-bottom: 25px;
+}
+
+.question h2 {
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+
+.question div {
+  position: relative;
+}
+
+.button {
+  position: absolute;
+  right: 50px;
+  top: 10px;
+  background-color: orangered;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 5px 10px;
+  border: none;
 }
